Bug fixing: btn-caret z-index fix Datepicker month and year select on focus layout fix Removed box shadow from input group form fields when there is an error

--- a/src/css/master.scss
+++ b/src/css/master.scss
@@ -2592,7 +2592,8 @@ form dl dd textarea:focus {
   box-shadow: 0 0 2px rgba(32,139,195,.6);
 }
 
-.table-filters select:focus {
+.table-filters select:focus,
+.ui-datepicker .ui-datepicker-title select:focus {
   display: inline-block;
   border: none;
 }
@@ -3294,6 +3295,7 @@ select[multiple].input-lg {
   position: relative;
   padding-bottom: 15px;
   margin-bottom: -2px;
+  z-index: 1;
 }
 
 .btn-caret:before, .btn-caret:after {
@@ -3750,8 +3752,6 @@ ul.errors, .errorMessage {
 .has-error .form-control:focus,
 .has-error .input-group .form-control:last-child {
   border-color: #953b39;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
 }
 
 .has-error .input-group-addon {
